--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -5,12 +5,20 @@ on:
 
 jobs:
   terraform:
-    name: "Terraform destroy"
+    name: 'Terraform-Destroy'
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.8.3
+      
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -25,5 +33,4 @@ jobs:
         run: cd 1-VPC && terraform init
 
       - name: Terraform Destroy
-        working-directory: ./1-VPC
-        run: terraform destroy --auto-approve
+        run: cd 1-VPC && terraform destroy --auto-approve
