Renomeando o job workflows

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -8,7 +8,7 @@ on:
       - main
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'Terraform-VPC'
     runs-on: ubuntu-latest
     defaults:
       run:
