--- a/.github/workflows/terraform-vpc.yaml
+++ b/.github/workflows/terraform-vpc.yaml
@@ -33,14 +33,14 @@ jobs:
         run: aws sts get-caller-identity
 
       - name: Terraform Init
-        run: cd 3-K8S && terraform init
+        run: cd 3-K8S/VPC && terraform init
 
       - name: Terraform Validate
-        run: cd 3-K8S && terraform validate
+        run: cd 3-K8S/VPC && terraform validate
 
       - name: Terraform Plan
-        run: cd 3-K8S && terraform plan
+        run: cd 3-K8S/VPC && terraform plan
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: cd 3-K8S && terraform apply -auto-approve 
+        run: cd 3-K8S/VPC && terraform apply -auto-approve 
