Adicionandno credenciais AWS no  workflows

--- a/.github/workflows/terraform-vpc.yaml
+++ b/.github/workflows/terraform-vpc.yaml
@@ -59,6 +59,16 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.3
+          
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
+      - name: Verify AWS creds
+        run: aws sts get-caller-identity
       - name: Terraform Init
         run: cd 3-K8S/EKS && terraform init
       - name: Terraform Validate
