--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -35,8 +35,8 @@ jobs:
       - name: Terraform Destroy
         run: cd 3-K8S/EKS && terraform destroy --auto-approve
 
-      # - name: Terraform Init
-      #   run: cd 3-K8S/VPC && terraform init
+      - name: Terraform Init
+        run: cd 3-K8S/VPC && terraform init
 
-      # - name: Terraform Destroy
-      #   run: cd 3-K8S/VPC && terraform destroy --auto-approve
+      - name: Terraform Destroy
+        run: cd 3-K8S/VPC && terraform destroy --auto-approve
